[gd_scene load_steps=2 format=3 uid="uid://bfnpbt6furpv0"]

[ext_resource type="Script" path="res://Assets/Code/short_circuit_warning_pannel.gd" id="1_fsqpc"]

[node name="ShortCircuitWarningPanel" type="Window"]
initial_position = 4
size = Vector2i(210, 140)
visible = false
script = ExtResource("1_fsqpc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "As modificações causarão curto circuito. Prosseguir mesmo assim?"
horizontal_alignment = 3
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DontShowAgain" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Não Mostrar Novamente"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Confirm" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Prosseguir"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancelar"

[connection signal="toggled" from="VBoxContainer/HBoxContainer2/DontShowAgain" to="." method="_on_dont_show_again_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
